macrostruttura con immagini

--- a/index.html
+++ b/index.html
@@ -9,60 +9,69 @@
     <body>
         <div class="container">
             <div class="col-1">
-                rfhdhhtd
+                <h2>C</h2>
 
             </div>
             <div class="col-1">
-                rfhdhhtd
+                <h2>O</h2>
 
             </div>
             <div class="col-1">
-                rfhdhhtd
+                <h2>U</h2>
 
             </div>
             <div class="col-1">
-                rfhdhhtd
+                <h2>N</h2>
+
 
             </div>
             <div class="col-1">
-                rfhdhhtd
+                <h2>T</h2>
+
 
             </div>
             <div class="col-1">
-                rfhdhhtd
+                <h2>E</h2>
+
 
             </div>
             <div class="col-1">
-                rfhdhhtd
+                <h2>R</h2>
+
 
             </div>
             <div class="col-1">
-                rfhdhhtd
+                <h2>S</h2>
+
 
             </div>
             <div class="col-1">
-                rfhdhhtd
+                <h2>T</h2>
 
             </div>
             <div class="col-1">
-                rfhdhhtd
+                <h2>R</h2>
+
 
             </div>
             <div class="col-1">
-                1colonna
+                <h2>I</h2>
+
 
             </div>
             <div class="col-1">
-                rfhdhhtd
+                <h2>K</h2>
+
 
             </div>
 
             <div class="col-0">
-                12colonne
+
 
             </div>
             <div class="sezmulti1">
                 <div class="col-8">
+                    <img src="https://lh3.googleusercontent.com/proxy/lKLpWmWICqSuyKuZGuOGkvMf6dnsZWuYNyriE1HQKP5mxa8hmbzrXBhc0hiktxugT1tcoGRZuD2y2Q0Mz1DgbCbz6YZUNdIgpSQVL7bVTz6yXrcPv2pc1drhuuxIyjBlrO9ipiLmVts0Xzj81xdV9ERKSbvncy6yBi5j" alt="">
 
 
                 </div>
@@ -70,7 +79,7 @@
 
                 </div>
                 <div class="col-2">
-
+            
                 </div>
                 <div class="sezmulti2">
                     <div class="col-1">
@@ -81,11 +90,13 @@
                     </div>
                     <div class="col-2">
 
+
                     </div>
                     <div class="col-6">
 
                     </div>
                     <div class="col-1">
+
 
                     </div>
 
@@ -96,6 +107,7 @@
 
 
                     <div class="col-2n">
+
 
                     </div>
                     <div class="col-2n">
@@ -112,6 +124,7 @@
 
                     </div>
                     <div class="col-6n">
+
 
                     </div>
 
